Fix program overlay text overflow on tablet.

--- a/assets/css/hsus.css
+++ b/assets/css/hsus.css
@@ -869,7 +869,7 @@ ul {
     .campaign-previews .preview.second {
       width: 50%; }
     .campaign-previews .preview .overlay h3, .campaign-previews .preview .overlay p {
-      max-width: 80%; }
+      max-width: 85%; }
     .campaign-previews .preview .overlay h3 {
       font-size: 1.5em;
       margin-bottom: 0.66667em; }
